# cardcraft

./: readme.md
craftlib/: Cargo.toml
craftlib/src/: c4.rs  card.rs  card_game.rs  game_factory.rs  lib.rs  r7.rs  stack.rs
frontend/: .gitignore  download_assets.sh  package-lock.json  package.json
frontend/src/app/: app.component.ts  app.config.ts
frontend/src/app/components/game-table/: game-table.component.html  game-table.component.scss  game-table.component.spec.ts  game-table.component.ts  game-table.service.ts
frontend/src/domain/: card.provider.interface.ts  game.provider.interface.ts  game.service.interface.ts  game.service.ts
frontend/src/domain/model/: game.model.ts
frontend/src/providers/: card.provider.service.ts  game.provider.service.ts
