[package]
name = "cardcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cardcraft"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]


[dependencies]
wasm-bindgen="0.2.87"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
[[bin]]
name = "cardcraft-cli"
path = "src/cli.rs"
